# kinetis-frdm

./: .gitignore  .travis.yml  Cargo.toml  LICENSE  README.md  Xargo.toml  bare-metal-arm-rust.sublime-project  build.rs  build.sh  ke06z.ld  layout.ld  lm4f120.json  lm4f120.ld  thumbv7em-none-eabi.json
.cargo/: config
examples/: kinetis_blink.rs  kinetis_uart.rs  launchpad_blink.rs  launchpad_cycle.rs  lm4fblink.rs
libs/primer/: Cargo.toml
libs/primer/src/: lib.rs
libs/primer/src/board/: launchpad.rs
libs/primer/src/common/: builtins.rs  memory.rs  mod.rs  startup.rs  volatile.rs
libs/primer/src/lm4f120h5qr/: fpu.rs  gpio.rs  mod.rs  registers.rs  systick.rs  timer.rs  uart.rs
primer/: Cargo.toml
primer/src/: gpio.rs  launchpad.rs  lib.rs  lm4f120h5qr.rs  pll.rs
primer/src/board/: launchpad.rs
primer/src/lm4f120h5qr/: gpio.rs  mod.rs  pll.rs  registers.rs  uart.rs
src/: gpio.rs  launchpad.rs  lib.rs  lm4f120h5qr.rs  main.rs  template.rs
src/board/: launchpad.rs  mod.rs
src/common/: builtins.rs  memory.rs  mod.rs  startup.rs
src/cpu/: mod.rs
src/cpu/cortex_m4f/: fpu.rs  mod.rs  registers.rs  systick.rs
src/cpu/lm4f120h5qr/: gpio.rs  mod.rs  pll.rs  registers.rs  systick.rs  timer.rs  uart.rs
src/lm4f120h5qr/: pll.rs  registers.rs  systick.rs
