[package]
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Philipp Oppermann <dev@phil-opp.com>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>",
	"Marc Brinkmann"
]
keywords = ["arm", "bare-metal", "blink", "lm4f120"]
license = "MIT"
name = "launchpad"
readme = "README.md"
version = "0.5.3"

# The development profile, used for `cargo build`.
[profile.dev]
panic = "abort"

# The release profile, used for `cargo build --release`.
[profile.release]
panic = "abort"
debug = true
lto = true

[dependencies]
r0 = "0.1.0"
cortex-m = "0.1.5"
volatile-register = "0.1.2"
lm4f120 = "0.2.0"
embedded-serial = "0.3.0"
#alloc-cortex-m = "0.1.0"
#alloc-cortex-m = { path = "/home/smokey/alloc-cortex-m"}
alloc-cortex-m = { git = "https://github.com/thejpster/alloc-cortex-m" }

[dependencies.compiler_builtins]
git = "https://github.com/rust-lang-nursery/compiler-builtins.git"
features = [ "weak" ]

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2"

[dependencies.rlibc]
version = "1.0"
