[package]
name = "primer"
version = "0.1.0"
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"
]
keywords = ["arm", "bare-metal", "blink"]
license = "MIT"
readme = "README.md"

[target.thumbv7em-none-eabi.dependencies.rust-libcore]
git = "https://github.com/hackndev/rust-libcore"

[dependencies]
