[package]
name = "primer"
version = "0.2.0"
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"
]
keywords = ["arm", "bare-metal", "blink"]
license = "MIT"
readme = "README.md"

[dependencies]
rust-libcore = { git = "https://github.com/hackndev/rust-libcore" }
