[package]
name = "primer"
version = "0.2.0"
authors = [
	"Michael Daffin <michael@daffin.io>",
	"Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"
]
keywords = ["arm", "bare-metal", "blink"]
license = "MIT"
readme = "README.md"

# [dependencies.compiler-rt]
# git = "https://github.com/japaric/compiler-rt.rs"

[dependencies.rlibc]
version = "^1.0"

[dependencies.lazy_static]
version = "0.2.*"
features = ["spin_no_std"]
