[package]
authors = ["Michael Daffin <michael@daffin.io>", "Jonathan 'theJPster' Pallant <github@thejpster.org.uk>"]
keywords = ["arm", "bare-metal", "blink"]
license = "MIT"
name = "primer"
readme = "README.md"
version = "0.2.0"

[dependencies]
linked_list_allocator = "*"
spin = "*"

[dependencies.lazy_static]
features = ["spin_no_std"]
version = "0.2.*"

[dependencies.rlibc]
version = "^1.0"
